# nwtk

./: LICENSE.txt  README.md  pyproject.toml
src/nwtk/: __about__.py  __init__.py  analysis.py  color.py  model.py
tests/: __init__.py  test.py
